--- a/css/background.css
+++ b/css/background.css
@@ -6,7 +6,7 @@
     content: "";
     position: absolute;
     width: 100%;
-    height: 400px;
+    height: 45vh;
     top: 0;
     left: 0;
     background-color: rgba(0, 0, 0, 0.6);
@@ -15,7 +15,7 @@
 
 .background-container {
     width: 100%;
-    height: 400px;
+    height: 45vh;
     background-image: url(../assets/img/anastase-maragos-307ViD8nRY8-unsplash.jpg);
     background-size: cover;
     background-position: center;
@@ -28,7 +28,7 @@
 
 .background-grid {
     z-index: 100;
-    gap: 2px;
+    gap: 5px;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -37,8 +37,12 @@
     color: var(--white)
 }
 
+.background-title {
+    margin-top: 5%;
+}
+
 .background-text {
-    margin-bottom: 30px;
+    margin-bottom: 15px;
     color: var(--secondary-color);
 }
 
@@ -49,6 +53,5 @@
     color: black;
 }
 .background-button:hover {
-    background-color: var(--tertiary-color);
-    transition: 1s;
+    background-color: var(--hover-text-color);
 }
