--- a/css/nav-bar.css
+++ b/css/nav-bar.css
@@ -1,29 +1,36 @@
 nav {
+    position: absolute;
     display: flex;
     flex-direction: row;
     width: 100%;
-    height: 25px;
+    height: 60px;
     align-items: center;
     justify-content: center;
-    background-color: var(--white);
+    background-color: transparent;
+    z-index: 100;
 }
 
 nav a {
-    color: black;
+    color: var(--white);
     font-size: 15px;
     font-weight: 100;
     text-decoration: none;
 }
 
-a:hover {
-    color: gray;
+a:hover{
+    color: var(--hover-text-color);
 }
 
 .nav-bar-left {
     width: 50%;
     display: flex;
     justify-content: flex-end;
-    gap: 30px;
+    gap: 40px;
+}
+
+.nav-bar-left button{
+    background-color: transparent;
+    color: var(--white)
 }
 
 .nav-bar-right {
