--- a/css/style.css
+++ b/css/style.css
@@ -10,10 +10,11 @@
     --secondary-color: #FDCEDF;
     --tertiary-color: #F8E8EE;
     --quaternary-color: #F9F5F6;
+    --card-color: #f0cad881;
     --white: #fff;
     --main-text-color: ;
     --title-color: ;
-    --description-color: ;
+    --description-color: #777777;
     --button-color: ;
     --error-color: ;
     --success-color: ;
