--- a/css/card.css
+++ b/css/card.css
@@ -1,24 +1,28 @@
 .card-section {
     width: 100%;
     display: flex;
-    flex-direction: column;
+}
+
+.grid-container {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .line-card {
-    width: 100%;
     height: fit-content;
-    padding-bottom: 50px;
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    width: 100%;
-    gap: 10%;
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 100px;
+    margin-top: 5%;
+    margin-bottom: 5%;
 }
 
 .card {
     width: fit-content;
     height: fit-content;
-    padding: 2% 2% 2% 2%;
+    padding: 25px 25px 25px 25px;
     margin-top: 3%;
     border-radius: 4px;
     background-color: var(--card-color);
